--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="Bookstore" />
+    <meta property="og:type" content="Website" />
+    <meta property="og:image" content="https://live.staticflickr.com/65535/51984860289_49905a32e6_k.jpg" />
+    <meta property="og:description" content="Bookstore is a website for all book lovers. You can manange your book list by adding and removing books." />
+    <meta name="author" content="Leonardo Goss" />
     <meta
       name="description"
       content="Application that you can store and manage data about books that you are reading or have already read"
